[project]
name = "pyto-code"
version = "0.1.0"
description = "A lightweight, extensible Python-first Code Agent framework for code generation, execution, and tooling with LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
